added eventsRouter and controller

--- a/backend/test/post_content_example.html
+++ b/backend/test/post_content_example.html
@@ -1,18 +1,22 @@
-<h1>JavaScript</h1>
-<p>JavaScript(JS) - Mультипарадигменный язык программирования. Поддерживает объектно-ориентированный, императивный и функциональный стили. Является реализацией спецификации ECMAScript (стандарт ECMA-262[7]). </p>
-<p>JavaScript обычно используется как встраиваемый язык для программного доступа к объектам приложений. Наиболее широкое применение находит в браузерах как язык сценариев для придания интерактивности веб-страницам[8].
-
-    Основные архитектурные черты: динамическая типизация, слабая типизация, автоматическое управление памятью, прототипное программирование, функции как объекты первого класса.
-
-    На JavaScript оказали влияние многие языки, при разработке была цель сделать язык похожим на Java. Языком JavaScript не владеет какая-либо компания или организация, что отличает его от ряда языков программирования, используемых в веб-разработке[~ 1][9].
-
-    Название «JavaScript» является зарегистрированным товарным знаком корпорации Oracle в США[10]. </p>
-<img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/120px-Unofficial_JavaScript_logo_2.svg.png">
-<h2>LOREM IPSUM DOLOR SIT AMET</h2>
-<p>Aenean vel elit scelerisque mauris. Imperdiet sed euismod nisi porta lorem mollis aliquam. Quis vel eros donec ac odio tempor orci dapibus ultrices. Elementum eu facilisis sed odio morbi. Nam at lectus urna duis convallis convallis tellus postId. Feugiat pretium nibh ipsum consequat nisl vel. Elementum pulvinar etiam non quam lacus. Sit amet porttitor eget.</p>
-<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui faucibus in ornare quam viverra orci sagittis eu volutpat.</blockquote>
+<h1>Christian Festivals and Holy Days</h1>
+<h2>Advent Sunday</h2>
+<p>Advent Sunday is the start of the Christian year and, in the Western churches, is four Sundays before Christmas. The Advent season continues until Christmas.</p>
+<p>The word advent means coming and during the Advent season the main theme is preparing for the coming of Jesus the Christ: preparing to celebrate the birth of Jesus and preparing for the coming of Christ in our lives. Advent Sunday is marked in some churches by the lighting of the first of five candles, the final one being lit on Christmas Day representing Christ as the light of the world.</p>
+<h2>All Saints' Day – 1 November</h2>
+<p>The early followers of Jesus were called saints or 'holy ones'. Later in the first century, a Saint (with a capital S) was a great man or woman of the past who was formally recognised by the church as having lived a virtuous life of faith and who can be an inspiration to people today.</p>
+<p>All Saints' Day is a festival on 1st November when many western Christian Churches honour and give thanks for both known and unknown Saints/saints. It used to be known as All Hallows Day (Hallows meaning a saint) and the feast day started the previous evening, the Eve of All Hallows or Hallowe'en. Many churches now move the festival to the nearest Sunday.</p>
+<h2>Ascension Day</h2>
+<p>Ascension Day mark the belief that Christ ascended to heaven after he was resurrected on Easter Day. It is normally celebrated 40 days after Easter following the Biblical accounts in the Gospel of Luke and in his Acts of the Apostles. Roman Catholics in England now celebrate it on the following Sunday.</p>
+<p>The significance of the Ascension of Christ is twofold:</p>
 <ul>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing</li>
-    <li>Aenean vel elit scelerisque mauris. Imperdiet sed euismod</li>
-    <li>Purus sit amet luctus venenatis lectus magna</li>
+    <li>It is seen to mark the end of the earthly appearances of the risen Christ before the disciples received Christ's Spirit at Pentecost.</li>
+    <li>It is regarded as a spiritual 'ascending' and return of the 'cosmic' Christ to God, with whom, it is believed, he was 'before' time.</li>
 </ul>
+<p>Ascension Day belongs to the Easter celebrations and may be losing popularity among faithful Christians because it is not seen to have a direct consequence in their lives in comparison to the Easter resurrection theme of new life and the Pentecost theme of God's Presence / Spirit.</p>
+<p>Some Christians regard the Ascension of Christ as a theological statement rather than a simple 'event' (hence the single quotation marks in the second statement above).</p>
+<h2>Christmas Day - 25 December (Western Christians)</h2>
+<p>The 25th of December is the time when Western Christians celebrate the birth of Jesus who Christians believe to be both the Messiah (or in Greek: the Christ) and son of God (that is, divine). Eastern Orthodox Christians celebrate the birth on the 7th January.</p>
+<p>Jesus' birth or 'nativity' is described in the Bible, in the New Testament Gospels of Matthew and Luke. There is disagreement among Christians about the status of the accounts, some regarding them as describing theological truths but not historical ones. The Gospels do not mention the date of Jesus' birth which was set by Pope Julius in the 4th century CE in order to Christianise the Pagan celebrations that took place at that time of year.</p>
+<p>The story of the nativity was taught through traditions of plays and also models of the manger, or crib, that Luke's Gospel states that the Jesus was born in. Today the Christmas festival has elements of Christian, Pagan and folk traditions and many Christians and non-Christians have concerns about its over-commercialisation.</p>
+<h2>Easter Day</h2>
+<p>Easter Day or Easter Sunday commemorates the resurrection of Jesus as the Christ (God's Anointed) after his death the Friday before (see Good Friday). His disciples began to experience Christ to be with them in a new way. Easter eggs are given which symbolise the new life which Christians experience and see at the heart of God's world.</p>
